--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mantine/hooks": "^5.2.4",
     "@tabler/icons": "^1.92.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "6"
   }
 }
