--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ chrome-user-data
 *.swp
 *.swo
 .parcel-cache
-dist/
+dist
 
 packages/react-devtools-core/dist
 packages/react-devtools-extensions/chrome/build
